# LATfield2

./: DOC_mainpage.dox  Doxyfile  Imag.hpp  LATfield2.hpp  LATfield2_Catalyst.hpp  LATfield2_Field.hpp  LATfield2_Field_decl.hpp  LATfield2_IO_server.hpp  LATfield2_Lattice.hpp  LATfield2_Lattice_decl.hpp  LATfield2_MultiField.hpp  LATfield2_MultiLAT.hpp  LATfield2_Multigrid.hpp  LATfield2_Multigrid_decl.hpp  LATfield2_PlanFFT.hpp  LATfield2_PlanFFT_decl.hpp  LATfield2_PlanFFT_tempMem.hpp  LATfield2_PlanFFT_tempMem_decl.hpp  LATfield2_PlanFFT_transpose.hpp  LATfield2_SettingsFile.hpp  LATfield2_Site.hpp  LATfield2_SiteRedBlack.hpp  LATfield2_Site_decl.hpp  LATfield2_latticeVector.hpp  LATfield2_latticeVector_decl.hpp  LATfield2_parallel2d.hpp  LATfield2_parallel2d_decl.hpp  LATfield2_parallel2d_layer.hpp  LATfield2_parallel2d_layer_decl.hpp  LATfield2_save_hdf5.h  LATfield2_save_hdf5_pixie.h  LATfield2_vector.hpp  LATfield2_vector_double.hpp  LATfield2_vector_float.hpp  SiteRedBlack.hpp  catalyst.hpp  examples_IOserver.dox  examples_fft.dox  examples_gettingStarted.dox  examples_poissonSolver.dox  (+8 more)
benchmarks/: benchmarks.cpp
benchmarks_tests/: benchmarks.cpp  benchmarks_particles.cpp  benchmarks_server.cpp  makefile  meson.build  wave_test.cpp  wave_test_back.cpp  wave_test_back_cpu  wave_test_cpu
benchmarks_tests/particles/: meson.build  testParticles.cpp
examples/: IOserver.cpp  ReadMe.txt  benchmark.cpp  boundary_test.cpp  fft.cpp  getStart  gettingStarted.cpp  gettingStarted_openMP.cpp  gsoMP  makefile  memory.cpp  meson.build  multigrid.cpp  particles.cpp  particles_IOissue.cpp  poissonSolver.cpp  test_alltoall.cpp  test_sum.cpp  vector.cpp  vector_prof.cpp
examples/exercice/: parallel_ex1.cpp
particles/: LATfield2_Particles.hpp  LATfield2_particle_description.hpp  LATfield2_particle_description_template.hpp  LATfield2_particle_rk4.hpp  LATfield2_particle_simple.hpp  LATfield2_particlesIO.h  meson.build  move_function.hpp  particles_tools.hpp  projections.hpp  projections_DDM.hpp  updateVel_function.hpp
tests/: fft.cpp  meson.build
